# ua-stress-engine

./: .gitattributes  .gitignore  README.md  _compression_analysis.py  analyze_luscinia.py  analyze_master_db.py  analyze_stress_service.py  build_master_db.py  build_web_stress_db.py  check_baseline.py  compare_2s_vs_univ.py  compare_models.py  conftest.py  decode_trie_logic.py  demo_pipeline.py  download_data_files.py  environment.yml  pyproject.toml  pytest.ini  test_parser_integration.py  test_simple_words.py  test_trie_quick.py  test_trie_validation.py  test_vowel_conversion.py  verify_dataclass_structure.py  verify_stress.py  verify_stress_results.py
documentation/: STRESS_SERVICE_DB_DESIGN.md  type_safety_improvements.md
ignore/: ConcuretUaWordStressSolution.md  TypeSafety.md  _compression_analysis.py  check_conflicts.py  check_coverage.py  check_schema.py  compare_models.py  inspect_data.py
scripts/: README.md  _inspect_master_db.py  lfs_cleanup.py  lfs_storage_monitor.py
src/: __init__.py
src/data_management/: README.md
src/data_management/export/: README.md  __init__.py  export_training_db.py  training_db_schema.sql
src/data_management/sources/: __init__.py
src/data_management/transform/: cache_utils.py  data_unifier.py  largeFileOPtimisationRefactoringPlan.md  linguistic_data_schema.sql  (+2 more)
src/lemmatizer/: README.md  lemmatizer.py
src/nlp/: __init__.py
src/stress_db_generator/: ARCHITECTURE_DIAGRAMS.md  MULTI_FORMAT_EXPORT.md  PIPELINE_ARCHITECTURE.md  QUICK_REFERENCE.md  README.md  REFACTORING_SUMMARY.md  __init__.py  benchmark_parallel.py  build_from_trie.py  build_lmdb.py  download_data_files.py  find_no_stress_words.py  generate_db.py  inspect_structure.py  lmdb_exporter.py  merger.py  parser.py  sample_stress_dict.txt  spacy_transformer.py  stress_db_schema.sql  stress_trie_analyzer.py  test_lmdb_query.py  trie_adapter.py  trie_parser.py  txt_parser.py  words_without_stress.txt
src/stress_prediction/: NAMING_CONVENTION.md  plan.md
src/stress_resolver/: __init__.py  ml_stress_resolver.py  pipeline.py  resolver_factory.py  stress_resolver.py
stress_db_generator/: download_data_files.py
tests/: test_pipeline.py  test_stress_service.py  test_tokenization_service.py
(+109 files in other folders)
