[project]
name = "versasense-backend"
version = "1.0.0"
description = "Ukrainian NLP backend for word stress prediction — Luscinia LightGBM model (99.44 % accuracy) with ONNX browser export."
authors = [
    { name = "Rostyslav Lukan", email = "lkn.rostyslav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
