[project]
name = "ua-stress-engine"
version = "1.0.0"
description = "Ukrainian NLP backend for word stress prediction — Luscinia lightgbm model (99.44 % accuracy) with ONNX browser export."
authors = [
    { name = "Rostyslav Lukan", email = "lkn.rostyslav@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"

# Core deps — needed for the DB-only stress resolver (lmdb lookup)
dependencies = [
    "lmdb>=1.4",
    "msgpack>=1.0",
]

[project.optional-dependencies]
# pip install ua-stress-engine[ml]
# Adds the LightGBM-based context-aware resolver (Luscinia model)
ml = [
    "lightgbm>=4.0",
    "numpy>=1.24",
]
# pip install ua-stress-engine[nlp]
# Adds spaCy tokenization pipeline
nlp = [
    "spacy>=3.7",
]
# pip install ua-stress-engine[full]
# Everything: DB resolver + ML resolver + NLP pipeline
full = [
    "ua-stress-engine[ml]",
    "ua-stress-engine[nlp]",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
